# dio-ai

./: .gitignore  .pre-commit-config.yaml  README.md  corrupting_data.py  download_pozalabs_midi.py  example_config.json  extract_chord_progression.py  fingerprint.Dockerfile  fingerprint.py  generate.py  generate_bart.py  preprocess.py  preprocess_old.py  pyproject.toml  tox.ini  train.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
dioai/: config.py  encoder.py  exceptions.py  logger.py  trainer.py
dioai/data/: build_dpr.py  dataset.py
dioai/data/dataset/: __init__.py  dataset.py  gpt2.py  gpt2_tf.py  magenta_tfrecord.py  tf_dataset.py  tfrecord.py
dioai/data/utils/: __init__.py  constants.py  utils.py
dioai/model/: __init__.py  layer.py  model.py
dioai/preprocessor/: __init__.py  chunk_midi.py  constants.py  container.py  encoder.py  exceptions.py  extract_info.py  pipeline.py  preprocessor.py  utils.py
dioai/preprocessor/autoencoder/: __init__.py  config.json  dataset.py  layer.py  main.py  model.py  train.py  utils.py
dioai/preprocessor/encoder/: __init__.py  control_change.py  encoder.py  meta.py  utils.py
dioai/preprocessor/encoder/cp/: __init__.py  constant.py
dioai/preprocessor/encoder/remi/: chord_recognition.py  constant.py  exceptions.py  utils.py
dioai/preprocessor/parser/: __init__.py  meta.py  utils.py
dioai/preprocessor/utils/: chord.py  constants.py  container.py  s3_downloader.py  utils.py
dioai/utils/: dependency.py
dioai/utils/sdk/: s3.py
dioai/utils/sdk/resources/: s3.json  s3.py
tests/: conftest.py
tests/dioai/preprocessor/: test_chunk_midi.py
tests/dioai/preprocessor/encoder/: test_meta.py
tests/dioai/preprocessor/utils/: test_utils.py
