[tool.poetry]
name = "dio-ai"
version = "0.1.0"
description = ""
authors = ["pozalabs <contact@pozalabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
magenta = "^2.1.3"
tensorflow = "^2.4.1"
tensor2tensor = "^1.15.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

