[tool.poetry]
name = "dioai"
version = "0.1.0"
description = ""
authors = ["pozalabs <contact@pozalabs.com>"]

[tool.poetry.dependencies]
python = "^3.7"
magenta = "^2.1.3"
tensorflow = "^2.4.1"
tensor2tensor = "^1.15.7"
torch = [
    {version = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp37-cp37m-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {version = "1.7.1", markers = "sys_platform == 'darwin'"}
]
torchvision = [
    {version = "https://download.pytorch.org/whl/cu110/torchvision-0.8.2%2Bcu110-cp37-cp37m-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {version = "0.8.2", markers = "sys_platform == 'darwin'"}
]
torchaudio = "0.7.2"
transformers = "^4.3.3"
tensorboard = "^2.4.1"
wheel = "^0.36.2"
parmap = "^1.5.2"
pydantic = "^1.8.1"
sentry-sdk = "^1.0.0"
boto3 = "^1.17.35"
music21 = "^6.7.1"
pytorch-lightning = "^1.2.7"
wandb = "^0.10.30"
fairseq = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"
tox = "^3.23.0"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

